--- a/TheBandDatabase/app/src/main/res/values/strings.xml
+++ b/TheBandDatabase/app/src/main/res/values/strings.xml
@@ -5,32 +5,35 @@
         <item>The Beatles</item>
         <item>Nirvana</item>
         <item>U2</item>
-        <item>The Beatles</item>
-        <item>Nirvana</item>
-        <item>U2</item>
-        <item>The Beatles</item>
-        <item>Nirvana</item>
-        <item>U2</item>
-        <item>The Beatles</item>
-        <item>Nirvana</item>
-        <item>U2</item>
+        <item>The Beatle</item>
+        <item>Nirvan</item>
+        <item>2</item>
+        <item>The Beatl</item>
+        <item>Nirva</item>
+        <item>U22</item>
+        <item>The Beat</item>
+        <item>Nir</item>
+        <item>U23</item>
+        <item>The Bea</item>
+        <item>Nir</item>
+        <item>U29</item>
     </string-array>
 
     <string-array name="descriptions">
         <item>An English rock band that formed in Liverpool in 1960.</item>
         <item>An American rock band that formed in Washington in 1987.</item>
         <item>An Irish rock band from Dublin that formed in 1976.</item>
-        <item>An English rock band that formed in Liverpool in 1960.</item>
-        <item>An American rock band that formed in Washington in 1987.</item>
-        <item>An Irish rock band from Dublin that formed in 1976.</item>
-        <item>An English rock band that formed in Liverpool in 1960.</item>
-        <item>An American rock band that formed in Washington in 1987.</item>
-        <item>An Irish rock band from Dublin that formed in 1976.</item>
-        <item>An English rock band that formed in Liverpool in 1960.</item>
-        <item>An American rock band that formed in Washington in 1987.</item>
-        <item>An Irish rock band from Dublin that formed in 1976.</item>
-        <item>An English rock band that formed in Liverpool in 1960.</item>
-        <item>An American rock band that formed in Washington in 1987.</item>
-        <item>An Irish rock band from Dublin that formed in 1976.</item>
+        <item>An  rock band that formed in Liverpool in 1960.</item>
+        <item>An  rock band that formed in Washington in 1987.</item>
+        <item>An  rock band from Dublin that formed in 1976.</item>
+        <item>An English  band that formed in Liverpool in 1960.</item>
+        <item>An American band that formed in Washington in 1987.</item>
+        <item>An Irish  band from Dublin that formed in 1976.</item>
+        <item>An English rock  that formed in Liverpool in 1960.</item>
+        <item>An American rock  that formed in Washington in 1987.</item>
+        <item>An Irish rock  from Dublin that formed in 1976.</item>
+        <item>An English rock band that  in Liverpool in 1960.</item>
+        <item>An American rock band that  in Washington in 1987.</item>
+        <item>An Irish rock band from Dublin that  in 1976.</item>
     </string-array>
 </resources>
